Use perf glissante for fund instead of value end of month